# bit

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  Pull_Out_Seqs.py  README.md  anvi-script-genbank-to-external-gene-calls-v2.py  bit-GL-combine-KO-and-tax-tables  bit-GL-combine-contig-tax-tables  bit-GTDB-tax-to-NCBI-tax  bit-calc  bit-calc-gc-per-sequence  bit-calc-gc-sliding-window  bit-calc-msa-shannon  bit-calc-variation-in-msa  bit-check-for-fastq-dup-headers  bit-colnames  bit-combine-bracken-and-add-lineage  bit-combine-go-summaries  bit-combine-kraken2-taxon-summaries  bit-count-bases  bit-count-bases-per-seq  bit-count-bases-per-sequence  bit-cov-combine-go-summaries-with-domains  bit-cov-propagate-go-terms  bit-cov-summarize-go-annots-w-domains  bit-data-locations  bit-dedupe-fasta-headers  bit-dl-genbank-and-refseq-assembly-summaries  bit-dl-genbank-by-accession  bit-dl-genbank-files  bit-dl-ncbi-assemblies  bit-dl-ncbi-assemblies-v2.sh  bit-dl-ncbi-assembly-summaries  bit-dl-ncbi-fasta-files  bit-dl-ncbi-gff-files  bit-extract-seqs-by-coords  bit-fasta-to-bed  bit-fasta-to-genbank  bit-figshare-upload  (+66 more)
.github/workflows/: check-gtdb-data.yaml  check-gtdb-metadata.yaml  ci.yaml  ci.yml  refresh-ncbi-assembly-data.yaml  refresh-ncbi-assembly-info.yaml
bit/: bit-GL-combine-contig-tax-tables  bit-calc  bit-calc-gc-per-sequence  bit-calc-gc-sliding-window  bit-calc-variation-in-msa  bit-check-for-fastq-dup-headers  bit-combine-bracken-and-add-lineage  bit-combine-kraken2-taxon-summaries  bit-count-bases-per-seq  bit-cov-analyzer  bit-data-locations  bit-dl-ncbi-assemblies  bit-extract-seqs-by-coords  bit-ez-screen  bit-fasta-to-genbank  bit-figshare-upload  bit-filter-seqs-by-length  bit-filter-table  bit-gen-iToL-colorstrip  bit-gen-iToL-map  bit-gen-kraken2-tax-plots  bit-genbank-locus-clean-slate  bit-genbank-to-AA-seqs  bit-genbank-to-cds-table  bit-get-accessions-from-GTDB  bit-get-cov-stats  bit-get-genome-summarize-wf  bit-get-go-term-info  bit-get-lineage-from-taxids  bit-get-test-data  bit-get-workflow  bit-gff-to-anvio  bit-kraken2-to-taxon-summaries  bit-lineage-to-tsv  bit-mutate-seqs  bit-normalize-table  bit-parse-fasta-by-headers  bit-parse-fastq-by-headers  bit-prot-acc-to-taxid  bit-remove-wraps  (+18 more)
bit/cli/: __init__.py  aa_diff.py  add_insertion.py  assemble.py  bit.py  calc_gc_per_seq.py  calc_gc_sliding_window.py  calc_variation_in_msa.py  check_fastq_for_dup_headers.py  check_for_fastq_dup_headers.py  colnames.py  common.py  count_bases.py  cov_analyzer.py  cov_stats.py  data.py  data_locations.py  dedupe_fasta_headers.py  dl_ncbi_assemblies.py  extract_seqs.py  ez_screen.py  fasta.py  fasta_to_bed.py  fasta_to_genbank.py  filter_fasta_by_length.py  filter_kofamscan_results.py  filter_table.py  gen_kraken2_tax_plots.py  gen_metagenome.py  gen_reads.py  genbank.py  get_accessions_from_gtdb.py  get_accessions_from_ncbi.py  get_cov_stats.py  get_lineage_from_taxids.py  get_mapped_reads_pid.py  get_test_data.py  get_workflow.py  go.py  itol.py  (+15 more)
bit/modules/: aa_diff.py  add_insertion.py  assemble.py  cov_analyzer.py  cov_stats.py  data_locations.py  dl_ncbi_assemblies.py  extract_seqs.py  ez_screen.py  filter_kofamscan_results.py  gen_metagenome.py  gen_reads.py  gen_reads_detection.py  genbank.py  general.py  get_cov_stats.py  get_mapped_reads_pid.py  get_test_data.py  get_workflow.py  input_parsing.py  itol.py  joint_encode.py  kraken2_combine_tax_summaries.py  kraken2_tax_plots.py  kraken2_tax_summary.py  lineage_to_tsv.py  mapped_read_stats.py  mapped_reads_pid.py  seqs.py  table.py
bit/scripts/: bit-GL-combine-KO-and-tax-tables  bit-assemble  bit-calc-gc-per-sequence  bit-calc-gc-sliding-window  bit-calc-variation-in-msa  bit-check-for-fastq-dup-headers  bit-colnames  bit-combine-bracken-and-add-lineage  bit-combine-go-summaries  bit-combine-kraken2-taxon-summaries  bit-count-bases  bit-count-bases-per-seq  bit-cov-analyzer  bit-data-locations  bit-dedupe-fasta-headers  bit-dl-ncbi-assemblies  bit-extract-seqs-by-coords  bit-ez-screen  bit-fasta-to-bed  bit-fasta-to-genbank  bit-filter-KOFamScan-results  bit-filter-fasta-by-length  bit-filter-seqs-by-length  bit-gen-iToL-binary-dataset  bit-gen-iToL-text-dataset  bit-gen-kraken2-tax-plots  bit-gen-reads  bit-genbank-locus-clean-slate  bit-genbank-to-AA-seqs  bit-genbank-to-cds-table  bit-genbank-to-fasta  bit-get-accessions-from-GTDB  bit-get-cov-stats  bit-get-go-term-info  bit-get-lineage-from-taxids  bit-get-mapped-reads-pid  bit-get-test-data  bit-get-workflow  bit-kraken2-to-taxon-summaries  bit-lineage-to-tsv  (+11 more)
bit/smk/: __init__.py  assemble.smk  assembly.smk  ez-screen-reads.smk
bit/test_data/: ez-screen-targets.fasta  kraken-example.report
bit/tests/: conftest.py  test_aa_diff.py  test_add_insertion.py  test_assemble.py  test_cli.py  test_cov_analyzer.py  test_cov_stats.py  test_data_locations.py  test_extract_seqs.py  (+27 more)
conda-recipe/: bit-subcommands-tab-completion.sh  build.sh  meta.yaml  post-link.sh
images/: bit-metagenomics-overview.afdesign
temp/: bit-cov-analyzer  coverage-stats.tsv  higher-region.fasta  init.fasta  mock.bam  mock.bam.bai  mock.fasta  mock.fasta.fai  notes.txt  out.fasta
test-data/: ez-screen-assembly.fasta  kraken-example-out.tsv
(+123 files in other folders)
