[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bit"
version = "2.0.0"
description = "A set of bioinformatics scripts and workflows"
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Mike Lee", email = "Michael.Lee0517@gmail.com" }]
urls = { Repository = "https://github.com/AstrobioMike/bit" }
# dependencies handled by conda installation

[tool.setuptools]
packages = { find = { where = ["."], include = ["bit*"] } }
include-package-data = true

[tool.setuptools.package-data]
bit = ["tests/data/*", "smk/*.smk", "smk/envs/*"]

[project.scripts]

bit = "bit.cli.bit:main"


## ncbi/gtdb-related ##
bit-dl-ncbi-assemblies = "bit.cli.dl_ncbi_assemblies:main"
bit-get-accs-from-gtdb = "bit.cli.get_accessions_from_gtdb:main"


## coverage / mapping ##
bit-cov-analyzer = "bit.cli.cov_analyzer:main"
bit-cov-stats = "bit.cli.cov_stats:main"
bit-mapped-reads-pid = "bit.cli.mapped_reads_pid:main"
    # think about combining this with bit-cov-stats and have a flag for writting out all read pids (or more info per read)


## sequence manipulation/read generation ##
bit-gen-reads = "bit.cli.gen_reads:main"
bit-mutate-seqs = "bit.cli.mutate_seqs:main"
bit-add-insertion = "bit.cli.add_insertion:main"
    # maybe put these under bit-seq or bit-simulate with subcommands:
        # gen-reads
        # mutate-seqs
        # add-insertion


## sequence searching ##
bit-ez-screen = "bit.cli.ez_screen:main"


## fasta utilities ##
bit-fasta = "bit.cli.fasta:main"
    # subcommands:
        # calc-gc
        # calc-var-in-msa
        # count
        # extract-by-coords
        # extract-by-headers
        # extract-by-primers
        # filter-by-length
        # modify-headers
        # remove-wraps
        # to-bed
        # to-genbank


## assembly ##
bit-assemble = "bit.cli.assemble:main"
bit-summarize-assembly = "bit.cli.summarize_assembly:main"


## taxonomy and lineage ##
bit-kraken2 = "bit.cli.kraken2:main"
    # subcommands:
        # tax-summary
        # tax-plots
bit-lineage = "bit.cli.lineage:main"
    # subcommands:
        # from-taxids
        # to-tsv


## table utilities ##
bit-table = "bit.cli.table:main"
    # subcommands:
        # colnames
        # filter
        # normalize
        # summarize-column


## workflows ##
bit-get-workflow = "bit.cli.get_workflow:main"
    # genome-summarize
    # metagenomics
    # SRA download


## functional-annotation helpers ##
bit-filter-ko-results = "bit.cli.filter_kofamscan_results:main"
bit-go = "bit.cli.go:main"
    # subcommands:
        # get-term-info
        # summarize-annotations
        # combine-summaries
        # slim-terms


## genbank manipulations ##
bit-genbank = "bit.cli.genbank:main"
    # subcommands:
        # to-fasta
        # to-AA-seqs
        # to-cds-tsv
        # to-cds-seqs


## iToL helpers ##
bit-itol = "bit.cli.itol:main"
    # subcommands:
        # binary-dataset
        # colorstrip
        # map
        # text-dataset


## bit-database related ##
bit-data = "bit.cli.data:main"
    # subcommands:
        # locations
            # check
            # set
        # get
            # ncbi-assembly-data
            # ncbi-tax-data
            # go-dbs
            # gtdb-data
            # test-data
