[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bit"
version = "2.6.0"
description = "A set of bioinformatics scripts and workflows"
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Mike Lee", email = "Michael.Lee0517@gmail.com" }]
urls = { Repository = "https://github.com/AstrobioMike/bit" }
# dependencies handled by conda installation

[tool.setuptools]
packages = { find = { where = ["."], include = ["bit*"] } }
include-package-data = true

[tool.setuptools.package-data]
bit = ["tests/data/*", "smk/*.smk", "smk/envs/*"]

[project.scripts]
bit = "bit.cli.bit:main"
