[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bit"
version = "2.8.1"
description = "A set of bioinformatics programs and workflows"
readme = "README.md"
license = { text = "GPLv3" }
authors = [{ name = "Mike Lee", email = "Michael.Lee0517@gmail.com" }]
urls = { Repository = "https://github.com/AstrobioMike/bit" }
# dependencies handled by conda installation

[tool.setuptools]
packages = { find = { where = ["."], include = ["bit*"] } }
include-package-data = true

[tool.setuptools.package-data]
bit = ["tests/data/*", "smk/*.smk", "smk/envs/*"]

[project.scripts]
bit = "bit.cli.bit:main"

[tool.pytest.ini_options]
testpaths = ["bit/tests"]
addopts = [
    "--cov",
    "--cov-context=test",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-config=.coveragerc",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing"]
source = [
    "bit.modules",
    "bit.cli.summarize_assembly",
    "bit.cli.gen_metagenome"
]
omit = [
    "*/__init__.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
]
